--- a/katip.cabal
+++ b/katip.cabal
@@ -33,18 +33,22 @@ library
 
   build-depends:       
       base >=4.6 && <4.7
-    , lens >=4.2 && <4.7
-    , mtl >=2.1 && <2.2
     , aeson >=0.7 && <0.8
-    , containers >=0.5 && <0.6
-    , text >=1.2 && <1.3
-    , hostname >=1.0 && <1.1
-    , time >= 1.2 && < 1.5
-    , bytestring >= 0.9 && < 0.11
-    , blaze-builder >= 0.3 && < 0.4
     , auto-update >= 0.1 && < 0.2
-    , old-locale >= 1.0 && < 1.1
+    , blaze-builder >= 0.3 && < 0.4
+    , bytestring >= 0.9 && < 0.11
+    , containers >=0.5 && <0.6
+    , hostname >=1.0 && <1.1
+    , lens >=4.2 && <4.7
     , lens-aeson >= 1.0 && < 1.1
+    , mtl >=2.1 && <2.2
+    , old-locale >= 1.0 && < 1.1
+    , string-conv >= 0.1 && < 0.2
+    , template-haskell >= 2.8 && < 2.10
+    , text >=1.2 && <1.3
+    , time >= 1.2 && < 1.5
+    , unix >= 2.5 && < 2.8
+    , unordered-containers >= 0.2 && < 0.3
 
   hs-source-dirs:      src
   default-language:    Haskell2010
