--- a/katip.cabal
+++ b/katip.cabal
@@ -49,4 +49,4 @@ library
 
   hs-source-dirs:      src
   default-language:    Haskell2010
-  ghc-optoions:        -Wall
+  ghc-options:        -Wall
