--- a/katip.cabal
+++ b/katip.cabal
@@ -62,6 +62,7 @@ benchmark bench
   build-depends:
       base
     , aeson
+    , blaze-builder
     , katip
     , criterion >= 0.8 && < 1.0
     , criterion-plus
