--- a/katip/katip.cabal
+++ b/katip/katip.cabal
@@ -32,9 +32,9 @@ library
       base >=4.6 && <4.7
     , aeson >=0.7 && <0.8
     , auto-update >= 0.1 && < 0.2
-    , blaze-builder >= 0.3 && < 0.4
     , bytestring >= 0.9 && < 0.11
     , containers >=0.5 && <0.6
+    , exceptions >= 0.5 && < 0.7
     , hostname >=1.0 && <1.1
     , lens >=4.2 && <4.7
     , lens-aeson >= 1.0 && < 1.1
