--- a/katip/katip.cabal
+++ b/katip/katip.cabal
@@ -15,6 +15,7 @@ library
   exposed-modules:
     Katip
     Katip.Core
+    Katip.Monadic
     Katip.Scribes.Handle
 
   -- other-modules:
@@ -46,6 +47,9 @@ library
                , transformers >= 0.3 && < 0.5
                , unix >= 2.5 && < 2.8
                , unordered-containers >= 0.2 && < 0.3
+               , monad-control >= 1.0 && < 1.1
+               , mtl
+               , transformers-base
 
   hs-source-dirs:      src
   default-language:    Haskell2010
