--- a/katip-elasticsearch/katip-elasticsearch.cabal
+++ b/katip-elasticsearch/katip-elasticsearch.cabal
@@ -1,7 +1,5 @@
 name:                katip-elasticsearch
 version:             0.1.0.0
--- synopsis:            
--- description:         
 license:             BSD3
 license-file:        LICENSE
 author:              Ozgun Ataman
@@ -12,11 +10,9 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     
+  exposed-modules:
     Katip.Scribes.ElasticSearch
-  -- other-modules:       
-  -- other-extensions:    
-  build-depends:       
+  build-depends:
       base >=4.6 && <4.7
     , katip
     , bloodhound >= 0.5 && < 0.6
@@ -24,3 +20,18 @@ library
     , uuid >= 1.3 && < 1.4
   hs-source-dirs:      src
   default-language:    Haskell2010
+
+benchmark bench
+  type: exitcode-stdio-1.0
+  main-is: Main.hs
+  hs-source-dirs: bench
+  default-language:    Haskell2010
+  ghc-options: -O2
+  build-depends:
+                 base
+               , katip-elasticsearch
+               , bloodhound
+               , deepseq
+               , criterion >= 0.8 && < 1.0
+               , rng-utils
+               , uuid
