--- a/katip-elasticsearch/katip-elasticsearch.cabal
+++ b/katip-elasticsearch/katip-elasticsearch.cabal
@@ -1,7 +1,7 @@
 name:                katip-elasticsearch
 version:             0.1.0.0
--- synopsis:            
--- description:         
+-- synopsis:
+-- description:
 license:             BSD3
 license-file:        LICENSE
 author:              Ozgun Ataman
@@ -12,15 +12,18 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     
+  exposed-modules:
     Katip.Scribes.ElasticSearch
-  -- other-modules:       
-  -- other-extensions:    
-  build-depends:       
+  -- other-modules:
+  -- other-extensions:
+  build-depends:
       base >=4.6 && <4.7
     , katip
     , bloodhound >= 0.5 && < 0.6
     , random >= 1.0 && < 1.2
     , uuid >= 1.3 && < 1.4
+    , aeson >=0.6 && <0.9
+    , stm >= 2.4.3 && < 2.5
+    , async >= 2.0.1.0 && < 2.1
   hs-source-dirs:      src
   default-language:    Haskell2010
