--- a/katip/katip.cabal
+++ b/katip/katip.cabal
@@ -50,6 +50,7 @@ library
                , monad-control >= 1.0 && < 1.1
                , mtl
                , transformers-base
+               , resourcet
 
   hs-source-dirs:      src
   default-language:    Haskell2010
