--- a/katip-elasticsearch/katip-elasticsearch.cabal
+++ b/katip-elasticsearch/katip-elasticsearch.cabal
@@ -18,6 +18,7 @@ library
     , bloodhound >= 0.5 && < 0.6
     , random >= 1.0 && < 1.2
     , uuid >= 1.3 && < 1.4
+    , http-client
   hs-source-dirs:      src
   default-language:    Haskell2010
 
