--- a/katip-elasticsearch/katip-elasticsearch.cabal
+++ b/katip-elasticsearch/katip-elasticsearch.cabal
@@ -19,6 +19,7 @@ library
     , random >= 1.0 && < 1.2
     , uuid >= 1.3 && < 1.4
     , http-client
+    , text
   hs-source-dirs:      src
   default-language:    Haskell2010
 
