--- a/katip-elasticsearch/katip-elasticsearch.cabal
+++ b/katip-elasticsearch/katip-elasticsearch.cabal
@@ -9,6 +9,10 @@ category:            Data
 build-type:          Simple
 cabal-version:       >=1.10
 
+flag lib-Werror
+  default: False
+  manual: True
+
 library
   exposed-modules:
     Katip.Scribes.ElasticSearch
@@ -21,12 +25,16 @@ library
     , aeson >=0.6 && <0.9
     , stm >= 2.4.3 && < 2.5
     , async >= 2.0.1.0 && < 2.1
+    , enclosed-exceptions >= 1.0.0 && < 1.1
     , http-client
     , text
+    , retry >= 0.6 && < 0.8
   hs-source-dirs:      src
   default-language:    Haskell2010
   hs-source-dirs:      src
   default-language:    Haskell2010
+  if flag(lib-Werror)
+    ghc-options: -Wall -Werror
 
 benchmark bench
   type: exitcode-stdio-1.0
