--- a/katip-elasticsearch/katip-elasticsearch.cabal
+++ b/katip-elasticsearch/katip-elasticsearch.cabal
@@ -24,6 +24,7 @@ library
     , uuid >= 1.3 && < 1.4
     , aeson >=0.6 && <0.9
     , stm >= 2.4.3 && < 2.5
+    , stm-chans >= 3.0.0.2 && < 3.1
     , async >= 2.0.1.0 && < 2.1
     , enclosed-exceptions >= 1.0.0 && < 1.1
     , http-client
