--- a/katip-elasticsearch/katip-elasticsearch.cabal
+++ b/katip-elasticsearch/katip-elasticsearch.cabal
@@ -30,6 +30,7 @@ library
     , http-client
     , text
     , retry >= 0.6 && < 0.8
+    , exceptions
   hs-source-dirs:      src
   default-language:    Haskell2010
   hs-source-dirs:      src
