--- a/katip/katip.cabal
+++ b/katip/katip.cabal
@@ -11,6 +11,10 @@ category:            Data, Text, Logging
 build-type:          Simple
 cabal-version:       >=1.10
 
+flag lib-Werror
+  default: False
+  manual: True
+
 library
   exposed-modules:
     Katip
@@ -55,6 +59,23 @@ library
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:        -Wall
+  if flag(lib-Werror)
+    ghc-options: -Werror
+
+test-suite test
+  type: exitcode-stdio-1.0
+  main-is: Main.hs
+  hs-source-dirs: test
+  default-language:    Haskell2010
+  build-depends: base
+               , katip
+               , aeson
+               , tasty
+               , tasty-quickcheck
+               , quickcheck-instances
+               , template-haskell
+               , text
+               , time
 
 
 benchmark bench
@@ -62,7 +83,9 @@ benchmark bench
   main-is: Main.hs
   hs-source-dirs: bench
   default-language:    Haskell2010
-  ghc-options: -O2
+  ghc-options: -O2 -Wall
+  if flag(lib-Werror)
+    ghc-options: -Werror
   build-depends:
                  base
                , aeson
