--- a/katip/katip.cabal
+++ b/katip/katip.cabal
@@ -49,6 +49,7 @@ library
                , text >= 0.11 && <1.3
                , time >= 1 && < 1.6
                , transformers >= 0.3 && < 0.5
+               , transformers-compat
                , unix >= 2.5 && < 2.8
                , unordered-containers >= 0.2 && < 0.3
                , monad-control >= 1.0 && < 1.1
