Fix thread id show bug in handle scribe

--- a/katip/katip.cabal
+++ b/katip/katip.cabal
@@ -72,11 +72,15 @@ test-suite test
                , katip
                , aeson
                , tasty
+               , tasty-hunit
                , tasty-quickcheck
                , quickcheck-instances
                , template-haskell
                , text
                , time
+               , temporary
+               , directory
+               , regex-tdfa-rc
 
 
 benchmark bench
