--- a/katip-elasticsearch/katip-elasticsearch.cabal
+++ b/katip-elasticsearch/katip-elasticsearch.cabal
@@ -16,6 +16,7 @@ flag lib-Werror
 library
   exposed-modules:
     Katip.Scribes.ElasticSearch
+    Katip.Scribes.ElasticSearch.Annotations
   build-depends:
       base >=4.6 && <4.9
     , katip
@@ -31,6 +32,8 @@ library
     , text
     , retry >= 0.6 && < 0.8
     , exceptions
+    , scientific
+    , unordered-containers
   hs-source-dirs:      src
   default-language:    Haskell2010
   hs-source-dirs:      src
@@ -53,6 +56,8 @@ benchmark bench
                , rng-utils
                , uuid
                , text
+               , unordered-containers
+               , aeson
 
 test-suite test
   type: exitcode-stdio-1.0
@@ -65,8 +70,10 @@ test-suite test
     , http-client
     , bloodhound
     , base
-    , tasty
+    , tasty >= 0.10.1.2 && < 0.11
     , tasty-hunit
+    , tasty-quickcheck
+    , quickcheck-instances
     , containers
     , transformers
     , lens
@@ -74,4 +81,6 @@ test-suite test
     , text
     , http-types
     , aeson
-
+    , vector
+    , unordered-containers
+    , scientific
