--- a/katip/katip.cabal
+++ b/katip/katip.cabal
@@ -48,6 +48,7 @@ library
                , template-haskell >= 2.8 && < 2.11
                , text >= 0.11 && <1.3
                , time >= 1 && < 1.6
+               , time-locale-compat >= 0.1.1.0 && < 0.2
                , transformers >= 0.3 && < 0.5
                , transformers-compat
                , unix >= 2.5 && < 2.8
