--- a/katip-elasticsearch/katip-elasticsearch.cabal
+++ b/katip-elasticsearch/katip-elasticsearch.cabal
@@ -34,6 +34,8 @@ library
     , exceptions
     , scientific
     , unordered-containers
+    , transformers
+    , http-types
   hs-source-dirs:      src
   default-language:    Haskell2010
   hs-source-dirs:      src
