--- a/katip-elasticsearch/katip-elasticsearch.cabal
+++ b/katip-elasticsearch/katip-elasticsearch.cabal
@@ -20,7 +20,7 @@ library
   build-depends:
       base >=4.6 && <4.9
     , katip
-    , bloodhound >= 0.7.0.1 && < 0.10
+    , bloodhound >= 0.7.0.1 && < 0.11
     , random >= 1.0 && < 1.2
     , uuid >= 1.3 && < 1.4
     , aeson >=0.6 && <0.11
@@ -36,6 +36,7 @@ library
     , unordered-containers
     , transformers
     , http-types
+    , time
   hs-source-dirs:      src
   default-language:    Haskell2010
   hs-source-dirs:      src
