Test index sharding

--- a/katip-elasticsearch/katip-elasticsearch.cabal
+++ b/katip-elasticsearch/katip-elasticsearch.cabal
@@ -87,6 +87,8 @@ test-suite test
     , vector
     , unordered-containers
     , scientific
+    , time
+    , stm
 
   if flag(lib-Werror)
     ghc-options: -Wall -Werror
