--- a/katip-elasticsearch/katip-elasticsearch.cabal
+++ b/katip-elasticsearch/katip-elasticsearch.cabal
@@ -18,7 +18,7 @@ library
     Katip.Scribes.ElasticSearch
     Katip.Scribes.ElasticSearch.Annotations
   build-depends:
-      base >=4.6 && <4.9
+      base >=4.6 && <5
     , katip
     , bloodhound >= 0.7.0.1 && < 0.11
     , random >= 1.0 && < 1.2
@@ -26,7 +26,7 @@ library
     , aeson >=0.6 && <0.11
     , stm >= 2.4.3 && < 2.5
     , stm-chans >= 3.0.0.2 && < 3.1
-    , async >= 2.0.1.0 && < 2.1
+    , async >= 2.0.1.0 && < 2.2
     , enclosed-exceptions >= 1.0.0 && < 1.1
     , http-client
     , text
@@ -73,7 +73,7 @@ test-suite test
     , http-client
     , bloodhound
     , base
-    , tasty >= 0.10.1.2 && < 0.11
+    , tasty >= 0.11
     , tasty-hunit
     , tasty-quickcheck
     , quickcheck-instances
