--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,12 @@ before_install:
 - export PATH=$HOME/.local/bin:$PATH
 - travis_retry curl -L https://www.stackage.org/stack/linux-x86_64 | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'
 
+install:
+  - wget --no-check-certificate https://download.elastic.co/elasticsearch/elasticsearch/elasticsearch-1.5.2.tar.gz
+  - tar xzf elasticsearch-1.5.2.tar.gz
+  - ./elasticsearch-1.5.2/bin/elasticsearch &
+
+
 # This line does all of the work: installs GHC if necessary, build the library,
 # executables, and test suites, and runs the test suites. --no-terminal works
 # around some quirks in Travis's terminal implementation.
