--- a/stack.yaml
+++ b/stack.yaml
@@ -7,8 +7,9 @@ extra-deps:
   - string-conv-0.1
   - aeson-0.10.0.0
   - criterion-1.1.0.0
-  - attoparsec-0.12.1.6
+  - attoparsec-0.13.0.1
   - rng-utils-0.2.1
+  - retry-0.7.1
 flags:
   katip:
     lib-Werror: true
