--- a/katip/katip.cabal
+++ b/katip/katip.cabal
@@ -1,7 +1,29 @@
 name:                katip
 version:             0.1.0.0
-synopsis:            A structured logging framework for tagging each log message with its
-                     surrounding context.
+synopsis:            A structured logging framework.
+description:
+  Katip is a structured logging framework with following design goals:
+
+  * Logs are structured, meaning they can be individually tagged with
+    key value data (JSON Objects).  This helps you add critical
+    details to log messages before you need them so that when you do,
+    they are available. Logs are also namespaced to help filter
+    different subsystems.
+
+  * Critical details for monitoring production systems such as host,
+    PID, thread id, module and line location are automatically
+    captured.
+
+  * Can be easily extended (even at runtime) to output to multiple
+    destinations at once (known as scribes). See @katip-elasticsearch@
+    as an example.
+
+  * Designed to be highly configurable. Can be adjusted both with
+    verbosity, which dictates how much of the log structure should
+    actually get logged, and severity. Each individual scribe can be
+    configured to a different log severity.
+
+  A note on the name: Katip is Turkish for scribe.
 license:             BSD3
 license-file:        LICENSE
 author:              Ozgun Ataman
