--- a/stack.yaml
+++ b/stack.yaml
@@ -10,6 +10,7 @@ extra-deps:
   - attoparsec-0.13.0.1
   - rng-utils-0.2.1
   - retry-0.7.1
+  - tasty-0.11.0.2
 flags:
   katip:
     lib-Werror: true
