--- a/katip-elasticsearch/katip-elasticsearch.cabal
+++ b/katip-elasticsearch/katip-elasticsearch.cabal
@@ -1,5 +1,27 @@
 name:                katip-elasticsearch
 synopsis:            ElasticSearch scribe for the Katip logging framework.
+description:
+
+  katip-elasticsearch is a scribe for the Katip logging framework that
+  sends structured logs to ElasticSearch. Some noteworthy features:
+
+  * Built in bounded buffering.
+
+  * Configurable pool of logging workers to help with high write
+    volume.
+
+  * Optional field type annotation to avoid mistyping values.
+
+  * Optional automatic date sharding, so logs can be filed into
+    monthly, daily, hourly, every minute indices. You can even specify
+    your own index routing logic. This pattern can be seen in the ELK
+    stack as a way of keeping indexes reasonably sized and easy to
+    optimize, rotate, and manage.
+
+  * Customizable retry policy for temporary outages and errors.
+
+  * Automatic index and mapping setup.
+
 version:             0.1.0.0
 license:             BSD3
 license-file:        LICENSE
@@ -9,6 +31,9 @@ copyright:           Soostone Inc, 2015
 category:            Data
 build-type:          Simple
 cabal-version:       >=1.10
+extra-source-files:
+  bench/Main.hs
+  test/Main.hs
 
 flag lib-Werror
   default: False
