Use correct pattern for examples

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ script:
   - stack $ARGS --no-terminal test --haddock --no-haddock-deps
   - stack $ARGS bench
   - stack $ARGS build
-  - for f in examples/*.hs; do stack $ARGS ghc -- -Wall -Werror $f -o /dev/null; done
+  - for f in katip/examples/*.hs; do stack $ARGS ghc -- -Wall -Werror $f -o /dev/null; done
   - stack $ARGS sdist
 
 # Caching so the next build will be fast too.
