--- a/katip-elasticsearch/katip-elasticsearch.cabal
+++ b/katip-elasticsearch/katip-elasticsearch.cabal
@@ -6,7 +6,7 @@ license:             BSD3
 license-file:        LICENSE
 author:              Ozgun Ataman
 maintainer:          ozgun.ataman@soostone.com
-copyright:           Soostone Inc, 2015
+copyright:           Soostone Inc, 2015-2016
 category:            Data
 build-type:          Simple
 cabal-version:       >=1.10
