--- a/katip/katip.cabal
+++ b/katip/katip.cabal
@@ -8,7 +8,7 @@ license:             BSD3
 license-file:        LICENSE
 author:              Ozgun Ataman
 maintainer:          ozgun.ataman@soostone.com
-copyright:           Soostone Inc, 2015
+copyright:           Soostone Inc, 2015-2016
 category:            Data, Text, Logging
 build-type:          Simple
 cabal-version:       >=1.10
