--- a/katip-elasticsearch/katip-elasticsearch.cabal
+++ b/katip-elasticsearch/katip-elasticsearch.cabal
@@ -35,15 +35,15 @@ library
     , stm-chans >= 3.0.0.2 && < 3.1
     , async >= 2.0.1.0 && < 2.2
     , enclosed-exceptions >= 1.0.0 && < 1.1
-    , http-client
-    , text
+    , http-client >= 0.3 && < 0.5
+    , text >= 0.11 && < 1.3
     , retry >= 0.7 && < 0.8
     , exceptions
-    , scientific
-    , unordered-containers
-    , transformers
-    , http-types
-    , time
+    , scientific >= 0.3.0.0 && < 0.4
+    , unordered-containers >= 0.1.0.0 && < 0.3
+    , transformers >= 0.2 && < 0.6
+    , http-types >= 0.8 && < 0.10
+    , time >= 1 && < 1.6
   hs-source-dirs:      src
   default-language:    Haskell2010
   hs-source-dirs:      src
