--- a/katip/katip.cabal
+++ b/katip/katip.cabal
@@ -64,9 +64,9 @@ library
                , unix >= 2.5 && < 2.8
                , unordered-containers >= 0.2 && < 0.3
                , monad-control >= 1.0 && < 1.1
-               , mtl
-               , transformers-base
-               , resourcet
+               , mtl >= 2.2 && < 2.3
+               , transformers-base >= 0.4.1 && < 0.5
+               , resourcet >= 1.1 && < 1.2
 
   hs-source-dirs:      src
   default-language:    Haskell2010
