Credit yours truly in the author field

--- a/katip-elasticsearch/katip-elasticsearch.cabal
+++ b/katip-elasticsearch/katip-elasticsearch.cabal
@@ -4,7 +4,7 @@ description:         See README.md for more details.
 version:             0.1.1.0
 license:             BSD3
 license-file:        LICENSE
-author:              Ozgun Ataman
+author:              Ozgun Ataman, Michael Xavier
 maintainer:          ozgun.ataman@soostone.com
 copyright:           Soostone Inc, 2015-2016
 category:            Data
