--- a/katip/katip.cabal
+++ b/katip/katip.cabal
@@ -57,8 +57,6 @@ library
                , either >= 4 && < 4.5
                , exceptions >= 0.5 && < 0.9
                , hostname >=1.0 && <1.1
-               , lens >= 4.4 && <4.14
-               , lens-aeson < 1.1
                , old-locale >= 1.0 && < 1.1
                , string-conv >= 0.1 && < 0.2
                , template-haskell >= 2.8 && < 2.11
@@ -73,6 +71,8 @@ library
                , mtl >= 2.2 && < 2.3
                , transformers-base >= 0.4.1 && < 0.5
                , resourcet >= 1.1 && < 1.2
+               , microlens >= 0.2.0.0 && < 0.5
+               , microlens-th >= 0.1.0.0 && < 0.4
 
   hs-source-dirs:      src
   default-language:    Haskell2010
