--- a/katip/katip.cabal
+++ b/katip/katip.cabal
@@ -98,6 +98,7 @@ test-suite test
                , temporary
                , directory
                , regex-tdfa-rc
+               , unordered-containers
 
 
 benchmark bench
