--- a/stack.yaml
+++ b/stack.yaml
@@ -13,6 +13,11 @@ extra-deps:
   - tasty-0.11.0.2
   - tagged-0.8.3
   - fail-4.9.0.0
+  # just for 7.8/lts-2
+  - microlens-th-0.3.0.1
+  - microlens-0.4.2.0
+  - time-1.5.0.1
+  - lens-aeson-1.0.0.5
 flags:
   katip:
     lib-Werror: true
