--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ addons:
 # change flags or use --stack-yaml to point to a different file.
 env:
 - ARGS=""
+- ARGS="--resolver lts-2.22 --flag time-locale-compat:-old-locale"
 - ARGS="--resolver lts-3"
 - ARGS="--resolver lts"
 - ARGS="--resolver nightly"
