--- a/katip-elasticsearch/katip-elasticsearch.cabal
+++ b/katip-elasticsearch/katip-elasticsearch.cabal
@@ -15,6 +15,7 @@ extra-source-files:
   changelog.md
   bench/Main.hs
   test/Main.hs
+tested-with: GHC == 7.8.4, GHC== 7.10.3
 
 flag lib-Werror
   default: False
