--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,11 @@ addons:
 # The different configurations we want to test. You could also do things like
 # change flags or use --stack-yaml to point to a different file.
 env:
-- ARGS=""
-- ARGS="--resolver lts-2.22 --flag time-locale-compat:-old-locale"
-- ARGS="--resolver lts-3"
-- ARGS="--resolver lts"
-- ARGS="--resolver nightly"
+- ARGS="" BUILDFLAGS=""
+- ARGS="--resolver lts-2.22" BUILDFLAGS="--flag time-locale-compat:-old-locale"
+- ARGS="--resolver lts-3" BUILDFLAGS=""
+- ARGS="--resolver lts" BUILDFLAGS=""
+- ARGS="--resolver nightly" BUILDFLAGS=""
 
 before_install:
 # Download and unpack the stack executable
@@ -36,9 +36,9 @@ install:
 # around some quirks in Travis's terminal implementation.
 script:
   - stack $ARGS setup
-  - stack $ARGS --no-terminal test --haddock --no-haddock-deps
+  - stack $ARGS $BUILDFLAGS --no-terminal test --haddock --no-haddock-deps
   - stack $ARGS bench
-  - stack $ARGS build
+  - stack $ARGS $BUILDFLAGS build
   - for f in katip/examples/*.hs; do stack $ARGS ghc -- -Wall -Werror $f -o /dev/null; done
   - stack $ARGS sdist
 
