--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,11 @@ addons:
 # The different configurations we want to test. You could also do things like
 # change flags or use --stack-yaml to point to a different file.
 env:
-- ARGS="" BUILDFLAGS=""
-- ARGS="--resolver=lts-2.22" BUILDFLAGS="--flag=time-locale-compat:-old-locale"
-- ARGS="--resolver=lts-3" BUILDFLAGS=""
-- ARGS="--resolver=lts" BUILDFLAGS=""
-- ARGS="--resolver=nightly" BUILDFLAGS=""
+- ARGS=""
+- ARGS="--stack-yaml=stack-7.8.yaml"
+- ARGS="--resolver=lts-3"
+- ARGS="--resolver=lts"
+- ARGS="--resolver=nightly"
 
 before_install:
 # Download and unpack the stack executable
