Swap regex-tdfa-rc for regex-tdfa
This resolves #20

--- a/katip/katip.cabal
+++ b/katip/katip.cabal
@@ -98,7 +98,7 @@ test-suite test
                , time
                , temporary
                , directory
-               , regex-tdfa-rc
+               , regex-tdfa
                , unordered-containers
 
 
