Set myself to maintainer email
Since I'm handling the issues on the project it seems like the right
thing to do.

--- a/katip-elasticsearch/katip-elasticsearch.cabal
+++ b/katip-elasticsearch/katip-elasticsearch.cabal
@@ -5,7 +5,7 @@ version:             0.2.0.0
 license:             BSD3
 license-file:        LICENSE
 author:              Ozgun Ataman, Michael Xavier
-maintainer:          ozgun.ataman@soostone.com
+maintainer:          michael.xavier@soostone.com
 copyright:           Soostone Inc, 2015-2016
 category:            Data
 build-type:          Simple
