--- a/stack-lts-2.yaml
+++ b/stack-lts-2.yaml
@@ -13,6 +13,7 @@ extra-deps:
   - tasty-0.11.0.2
   - tagged-0.8.3
   - fail-4.9.0.0
+  - uuid-1.3.12
   # just for 7.8/lts-2
   - microlens-th-0.3.0.1
   - microlens-0.4.2.0
