--- a/katip/katip.cabal
+++ b/katip/katip.cabal
@@ -108,7 +108,7 @@ benchmark bench
   main-is: Main.hs
   hs-source-dirs: bench
   default-language:    Haskell2010
-  ghc-options: -O2 -Wall
+  ghc-options: -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
   if flag(lib-Werror)
     ghc-options: -Werror
   build-depends:
@@ -122,3 +122,4 @@ benchmark bench
                , time
                , transformers
                , deepseq
+               , async
