--- a/stack.yaml
+++ b/stack.yaml
@@ -14,6 +14,7 @@ extra-deps:
   - tagged-0.8.3
   - fail-4.9.0.0
   - uuid-1.3.12
+  - regex-tdfa-rc-1.1.8.3
 flags:
   katip:
     lib-Werror: true
