Add Scribe output test agains golden file
Added code tests Handle scribe output against a golden file.

This is used to check that changes to Handle scribe output same log
format as before.

Golden file was generated with original slow time formatting code.

This test will fail on non utf8 locales because golden file is in utf-8.

It generates all meaningfull variations of Item, and also tests
writing of payload of different Aeson constructors

Note: currently Handle scribe does not write Array payload at all.

--- a/katip/katip.cabal
+++ b/katip/katip.cabal
@@ -90,7 +90,9 @@ test-suite test
   build-depends: base
                , katip
                , aeson
+               , bytestring
                , tasty >= 0.10.1.2
+               , tasty-golden
                , tasty-hunit
                , tasty-quickcheck
                , quickcheck-instances
@@ -102,7 +104,7 @@ test-suite test
                , directory
                , regex-tdfa
                , unordered-containers
-
+               , microlens
 
 benchmark bench
   type: exitcode-stdio-1.0
