--- a/stack-lts-5.yaml
+++ b/stack-lts-5.yaml
@@ -1,8 +1,12 @@
-resolver: lts-7.9
+resolver: lts-5.18
 packages:
   - katip
   - katip-elasticsearch
-extra-deps: []
+extra-deps:
+  - bloodhound-0.12.0.0
+  - string-conv-0.1.2
+  - aeson-0.11.1.0
+  - http-client-0.5.4
 flags:
   katip:
     lib-Werror: true
