--- a/stack-nightly.yaml
+++ b/stack-nightly.yaml
@@ -1,21 +1,9 @@
-resolver: nightly-2016-06-01
+resolver: nightly-2016-11-23
 packages:
   - katip
   - katip-elasticsearch
 extra-deps:
-  - bloodhound-0.11.0.0
-  - string-conv-0.1
-  - aeson-0.11.1.0
-  - attoparsec-0.13.0.1
-  - rng-utils-0.2.1
-  - retry-0.7.4
-  - tasty-0.11.0.2
-  - tagged-0.8.3
-  - fail-4.9.0.0
-  - regex-tdfa-rc-1.1.8.3
-  - turtle-1.2.8
-  - managed-1.0.5
-  - optional-args-1.0.1
+  - bloodhound-0.12.0.0 # drop after https://github.com/fpco/stackage/pull/2084 merged
 flags:
   katip:
     lib-Werror: true
