--- a/stack-lts-2.yaml
+++ b/stack-lts-2.yaml
@@ -3,26 +3,23 @@ packages:
   - katip
   - katip-elasticsearch
 extra-deps:
-  - bloodhound-0.11.0.0
-  - string-conv-0.1
+  - bloodhound-0.12.0.0
+  - string-conv-0.1.2
   - aeson-0.11.1.0
-  - criterion-1.1.0.0
-  - attoparsec-0.13.0.1
-  - rng-utils-0.2.1
-  - retry-0.7.4
-  - tasty-0.11.0.2
-  - tagged-0.8.3
+  - http-client-0.5.4
   - fail-4.9.0.0
+  - tagged-0.8.3
   - uuid-1.3.12
-  # just for 7.8/lts-2
-  - microlens-th-0.3.0.1
-  - microlens-0.4.2.0
-  - time-1.5.0.1
-  - lens-aeson-1.0.0.5
+  - attoparsec-0.13.1.0
+  - retry-0.7.4.2
+  - tasty-0.11.0.4
   - time-locale-compat-0.1.1.1
-  - cryptonite-0.16
+  - cryptonite-0.20
+  - microlens-0.4.7.0
+  - microlens-th-0.4.1.0
+  - time-1.5.0.1
   - memory-0.13
-
+  - rng-utils-0.2.1
 flags:
   katip:
     lib-Werror: true
