--- a/stack-lts-3.yaml
+++ b/stack-lts-3.yaml
@@ -13,6 +13,7 @@ extra-deps:
   - attoparsec-0.13.1.0
   - retry-0.7.4.2
   - tasty-0.11.0.4
+  - rng-utils-0.2.1
 flags:
   katip:
     lib-Werror: true
