--- a/stack-lts-5.yaml
+++ b/stack-lts-5.yaml
@@ -7,6 +7,7 @@ extra-deps:
   - string-conv-0.1.2
   - aeson-0.11.1.0
   - http-client-0.5.4
+  - rng-utils-0.2.1
 flags:
   katip:
     lib-Werror: true
