Fix lts-2 build

--- a/stack-lts-2.yaml
+++ b/stack-lts-2.yaml
@@ -20,6 +20,7 @@ extra-deps:
   - time-1.5.0.1
   - memory-0.13
   - rng-utils-0.2.1
+  - lens-aeson-1.0.0.5
 flags:
   katip:
     lib-Werror: true
