--- a/katip/katip.cabal
+++ b/katip/katip.cabal
@@ -23,6 +23,8 @@ extra-source-files:
   test/Main.hs
   test/Katip/Tests.hs
   test/Katip/Tests/Scribes/Handle.hs
+  test/Katip/Tests/Scribes/Handle-text.golden
+  test/Katip/Tests/Format/Time.hs
 tested-with: GHC == 7.8.4, GHC== 7.10.3
 
 source-repository head
@@ -86,6 +88,10 @@ test-suite test
   type: exitcode-stdio-1.0
   main-is: Main.hs
   hs-source-dirs: test
+  other-modules:
+    Katip.Tests.Format.Time
+    Katip.Tests.Scribes.Handle
+    Katip.Tests
   default-language:    Haskell2010
   build-depends: base
                , katip
@@ -100,11 +106,14 @@ test-suite test
                , text
                , time
                , time-locale-compat >= 0.1.0.1 && < 0.2
-               , temporary
                , directory
                , regex-tdfa
                , unordered-containers
                , microlens
+  ghc-options: -Wall
+  if flag(lib-Werror)
+    ghc-options: -Werror
+
 
 benchmark bench
   type: exitcode-stdio-1.0
