--- a/katip/katip.cabal
+++ b/katip/katip.cabal
@@ -60,7 +60,7 @@ library
                , bytestring >= 0.9 && < 0.11
                , containers >=0.4 && <0.6
                , either >= 4 && < 4.5
-               , exceptions >= 0.5 && < 0.9
+               , safe-exceptions >= 0.1.0.0
                , hostname >=1.0 && <1.1
                , old-locale >= 1.0 && < 1.1
                , string-conv >= 0.1 && < 0.2
@@ -77,7 +77,7 @@ library
                , microlens >= 0.2.0.0 && < 0.5
                , microlens-th >= 0.1.0.0 && < 0.5
                , semigroups
-               , unagi-chan < 0.5.0.0
+               , stm >= 2.4
 
   hs-source-dirs:      src
   default-language:    Haskell2010
@@ -142,3 +142,6 @@ benchmark bench
                , transformers
                , deepseq
                , async
+               , filepath
+               , safe-exceptions
+               , directory
