WIP, support bloodhound 0.13 and above
Next step is to finish implementing a test flag so we can actually get
real integration testing against 1 and 5

--- a/stack.yaml
+++ b/stack.yaml
@@ -2,7 +2,8 @@ resolver: lts-8.21
 packages:
   - katip
   - katip-elasticsearch
-extra-deps: []
+extra-deps:
+  - bloodhound-0.14.0.0
 flags:
   katip:
     lib-Werror: true
