--- a/katip-elasticsearch/katip-elasticsearch.cabal
+++ b/katip-elasticsearch/katip-elasticsearch.cabal
@@ -28,7 +28,7 @@ library
   build-depends:
       base >=4.6 && <5
     , katip >= 0.2.0.0 && < 0.5
-    , bloodhound >= 0.11.0.0 && < 0.13
+    , bloodhound >= 0.13.0.0 && < 0.15
     , uuid >= 1.3.12 && < 1.4
     , aeson >=0.6 && <1.2
     , stm >= 2.4.3 && < 2.5
@@ -44,6 +44,7 @@ library
     , transformers >= 0.2 && < 0.6
     , http-types >= 0.8 && < 0.10
     , time >= 1 && < 1.7
+    , bytestring
   hs-source-dirs:      src
   default-language:    Haskell2010
   hs-source-dirs:      src
