Attempt to circumvent travis stalling on builds
I'm assuming that it is taking the machines travis is using literally
10 minutes to build bloodhound which is pretty high but also GHC is
slow and I'm sure the instances free builds run on are really low
spec, so maybe that's the issue.

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,8 @@ install:
   # set up a repo for snapshot testing. Required in ES >= 1.6
   - echo "path.repo = [\"/tmp\"]" >> ./elasticsearch-$ESVERSION/elasticsearch.yml
   - ./elasticsearch-$ESVERSION/bin/elasticsearch &
+  # Bloodhound seems to take a while to build and can sometimes stall out the build when travis detects no output.
+  - while true; do echo "travis pls"; sleep 30; done &
 
 
 # This line does all of the work: installs GHC if necessary, build the library,
