--- a/katip-elasticsearch/katip-elasticsearch.cabal
+++ b/katip-elasticsearch/katip-elasticsearch.cabal
@@ -14,6 +14,7 @@ extra-source-files:
   README.md
   changelog.md
   bench/Main.hs
+  examples/example.hs
   test/Main.hs
 tested-with: GHC == 7.8.4, GHC== 7.10.3
 
