--- a/katip-elasticsearch/katip-elasticsearch.cabal
+++ b/katip-elasticsearch/katip-elasticsearch.cabal
@@ -106,7 +106,7 @@ benchmark katip-elasticsearch-bench
   main-is: Main.hs
   hs-source-dirs:
       bench
-  ghc-options: -O2
+  ghc-options: -O
   build-depends:
       base
     , katip
