--- a/katip-elasticsearch/katip-elasticsearch.cabal
+++ b/katip-elasticsearch/katip-elasticsearch.cabal
@@ -51,6 +51,7 @@ library
     , exceptions
     , http-client >=0.3 && <0.6
     , http-types >=0.8 && <0.10
+    , random >=1.1 && <1.2
     , retry >=0.7 && <0.8
     , scientific >=0.3.0.0 && <0.4
     , stm >=2.4.3 && <2.5
@@ -61,6 +62,7 @@ library
     , unagi-chan
     , unordered-containers >=0.1.0.0 && <0.3
     , uuid >=1.3.12 && <1.4
+    , vector >= 0.12.0.1 && < 0.13.0.0
   if flag(lib-werror)
     ghc-options: -Wall -Werror
   hs-source-dirs:
@@ -119,6 +121,7 @@ benchmark katip-elasticsearch-bench
     , rng-utils
     , text
     , time
+    , unagi-chan
     , unordered-containers
     , uuid
   default-language: Haskell2010
