--- a/katip-elasticsearch/package.yaml
+++ b/katip-elasticsearch/package.yaml
@@ -35,6 +35,7 @@ library:
   - exceptions
   - http-client >=0.3 && <0.6
   - http-types >=0.8 && <0.10
+  - random >=1.1 && <1.2
   - retry >=0.7 && <0.8
   - scientific >=0.3.0.0 && <0.4
   - stm >=2.4.3 && <2.5
@@ -45,6 +46,7 @@ library:
   - unagi-chan
   - unordered-containers >=0.1.0.0 && <0.3
   - uuid >=1.3.12 && <1.4
+  - vector >= 0.12.0.1 && < 0.13.0.0
   when:
   - condition: flag(lib-werror)
     ghc-options:
@@ -105,6 +107,7 @@ benchmarks:
     - rng-utils
     - text
     - time
+    - unagi-chan
     - unordered-containers
     - uuid
 
